--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -15,9 +15,9 @@
 <body>
     $partial("web/templates/header.html")$
 
-    <main role="main">
+    <div id="main" class="grid-container">
         $body$
-    </main>
+    </div>
 
     $partial("web/templates/footer.html")$
 
