--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>$title$</title>
 
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <!-- Foundation CSS -->
     <link href="static/css/app.css" rel='stylesheet' type='text/css'>
 </head>
