--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -1,15 +1,24 @@
 <div data-sticky-container>
 <div class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%">
+
     <div class="top-bar-left">
       <ul class="menu">
-        <li class="menu-text"><a href="index.html">Home</a></li>
+        <li $if(menu1-active)$ class="active" $endif$>
+          <a class="menu-text" href="index.html">Home</a>
+        </li>
       </ul>
     </div>
+
     <div class="top-bar-right">
       <ul class="menu">
-        <li><a class="ui item" href="/publications.html">Publications</a></li>
-        <li><a class="ui item" href="https://github.com/kaizhang">GITHUB</a></li>
+        <li $if(menu2-active)$ class="active" $endif$>
+          <a class="menu-text" href="/publications.html">Publication</a>
+        </li>
+        <li $if(menu3-active)$ class="active" $endif$>
+          <a class="menu-text" href="https://github.com/kaizhang">Github</a>
+        </li>
       </ul>
     </div>
+
 </div>
 </div>
