--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -8,6 +8,7 @@
     <title>$title$</title>
 
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <script src="https://kit.fontawesome.com/8876e8f198.js"></script>
     <!-- Foundation CSS -->
     <link href="static/css/app.css" rel='stylesheet' type='text/css'>
 </head>
