--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -1,4 +1,10 @@
-<footer class="grid-container">
-    <hr />
-    <p>&copy; 2021-2022 Kai Zhang.</p>
+<footer>
+    <div class="grid-x align-middle">
+        <div class="cell shrink"><p>&copy; 2021-2022 Kai Zhang</p></div>
+        <div class="cell auto"></div>
+        <div class="cell auto shrink">
+            <a href="mailto: kaz007@ucsd.edu"><i style="color:white" class="fas fa-envelope fa-lg"></i></a>
+            <a href="https://github.com/kaizhang"><i style="color:white" class="fab fa-github fa-lg"></i></a>
+        </div>
+    </div>
 </footer>
