--- a/web/static/css/_settings.scss
+++ b/web/static/css/_settings.scss
@@ -872,8 +872,8 @@ $tooltip-radius: $global-radius;
 // -----------
 
 $topbar-padding: 0.5rem;
-$topbar-background: rgba(147,128,108,.2);
-$topbar-submenu-background: rgb(192, 171, 149);
+$topbar-background: rgba(219,206,192,.6);
+$topbar-submenu-background: #e9e1d8;
 $topbar-title-spacing: 0.5rem 1rem 0.5rem 0;
 $topbar-input-width: 200px;
 $topbar-unstack-breakpoint: medium;
