--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -9,40 +9,40 @@
 // @include foundation-flex-grid;
 @include foundation-xy-grid-classes;
 @include foundation-typography;
-@include foundation-button;
-@include foundation-forms;
+//@include foundation-button;
+//@include foundation-forms;
 // @include foundation-range-input;
 @include foundation-accordion;
 @include foundation-accordion-menu;
-@include foundation-badge;
-@include foundation-breadcrumbs;
-@include foundation-button-group;
-@include foundation-callout;
-@include foundation-card;
-@include foundation-close-button;
+//@include foundation-badge;
+//@include foundation-breadcrumbs;
+//@include foundation-button-group;
+//@include foundation-callout;
+//@include foundation-card;
+//@include foundation-close-button;
 @include foundation-menu;
 @include foundation-menu-icon;
-@include foundation-drilldown-menu;
+// @include foundation-drilldown-menu;
 @include foundation-dropdown;
 @include foundation-dropdown-menu;
-@include foundation-responsive-embed;
-@include foundation-label;
-@include foundation-media-object;
-@include foundation-off-canvas;
-@include foundation-orbit;
-@include foundation-pagination;
-@include foundation-progress-bar;
-@include foundation-slider;
+// @include foundation-responsive-embed;
+// @include foundation-label;
+// @include foundation-media-object;
+// @include foundation-off-canvas;
+// @include foundation-orbit;
+// @include foundation-pagination;
+// @include foundation-progress-bar;
+// @include foundation-slider;
 @include foundation-sticky;
-@include foundation-reveal;
-@include foundation-switch;
-@include foundation-table;
-@include foundation-tabs;
-@include foundation-thumbnail;
-@include foundation-title-bar;
+// @include foundation-reveal;
+// @include foundation-switch;
+// @include foundation-table;
+// @include foundation-tabs;
+// @include foundation-thumbnail;
+// @include foundation-title-bar;
 @include foundation-tooltip;
 @include foundation-top-bar;
-@include foundation-visibility-classes;
+// @include foundation-visibility-classes;
 // @include foundation-float-classes;
 @include foundation-flex-classes;
 
@@ -73,6 +73,7 @@ a.is-active {
 
 .top-bar {
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .top-bar-left>ul, .top-bar-right>ul {
