--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -1,5 +1,5 @@
 <div data-sticky-container>
-<div class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%">
+  <nav class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="the-body:top">
 
     <div class="top-bar-left">
       <ul class="menu">
@@ -24,5 +24,5 @@
       </ul>
     </div>
 
-</div>
+  </nav>
 </div>
