--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -42,7 +42,7 @@
 // @include foundation-title-bar;
 @include foundation-tooltip;
 @include foundation-top-bar;
-// @include foundation-visibility-classes;
+@include foundation-visibility-classes;
 // @include foundation-float-classes;
 @include foundation-flex-classes;
 
@@ -58,7 +58,7 @@ body {
 }
   
 #main {
-    padding-top: 15px;
+    padding: 15px;
     flex: 1;
 }
 
