--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -15,7 +15,7 @@
 </head>
 
 
-<body id="the-body">
+<body>
     $partial("web/templates/header.html")$
 
     <div id="main" class="grid-container">
