--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -71,7 +71,10 @@ a.is-active {
     margin: 20px 0px;
 }
 
-.top-bar {
+nav.top-bar {
+    position: sticky;
+    top: 0px;
+    z-index: 999;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 }
