--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -1,5 +1,4 @@
-<div data-sticky-container>
-  <nav class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="the-body:top">
+<nav class="top-bar">
 
     <div class="top-bar-left">
       <ul class="menu">
@@ -24,5 +23,4 @@
       </ul>
     </div>
 
-  </nav>
-</div>
+</nav>
