--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -12,8 +12,8 @@
 //@include foundation-button;
 //@include foundation-forms;
 // @include foundation-range-input;
-@include foundation-accordion;
-@include foundation-accordion-menu;
+// @include foundation-accordion;
+// @include foundation-accordion-menu;
 //@include foundation-badge;
 //@include foundation-breadcrumbs;
 //@include foundation-button-group;
@@ -33,7 +33,7 @@
 // @include foundation-pagination;
 // @include foundation-progress-bar;
 // @include foundation-slider;
-@include foundation-sticky;
+// @include foundation-sticky;
 // @include foundation-reveal;
 // @include foundation-switch;
 // @include foundation-table;
