--- a/web/templates/default.html
+++ b/web/templates/default.html
@@ -10,6 +10,9 @@
 
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <script src="https://kit.fontawesome.com/8876e8f198.js"></script>
+
+    <link rel="icon" type="image/svg+xml" href="/static/img/logo.svg">
+
     <!-- Foundation CSS -->
     <link href="static/css/app.css" rel='stylesheet' type='text/css'>
 </head>
