--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -1,24 +1,30 @@
 <nav class="top-bar">
-
     <div class="top-bar-left">
       <ul class="menu">
-        <li><a href="index.html">Home</a></li>
+        <li>
+          <a href="index.html">
+          <image id="logo" src="static/img/logo.svg" />
+            <span>KAI ZHANG</span>
+          </a>
+        </li>
       </ul>
     </div>
 
     <div class="top-bar-right">
       <ul class="dropdown menu" data-dropdown-menu>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Research</a></li>
 
         <li>
           <a href="/publications.html">Publication</a>
 
           <ul class="menu">
-            <li><a href="/publications_selected.html">Selected</a></li>
+            <li><a href="/publications_selected.html">Selected publications</a></li>
           </ul>
 
         </li>
 
-        <li><a href="https://github.com/kaizhang">Github</a></li>
+        <li><a href="#">Software</a></li>
 
       </ul>
     </div>
